--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     </header>
     
     <main>
-       <article>
-          
-       </article>
+       <div>
+<h2>Alcançe seu potencial na música.</h2>
+       </div>
+       <div>
+
+       </div>
     </main>
     <footer>
         <h2>siga-nos nas redes sociais</h2>
