--- a/index.html
+++ b/index.html
@@ -18,17 +18,24 @@
 
         </nav>
     </header>
-    
+    <div class="template"></div>
     <main>
-       <div>
-<h2>Alcançe seu potencial na música.</h2>
-       </div>
-       <div>
+        <h1>Torne-se um músico melhor realizando seu sonho!</h1>
+        <aside>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti itaque, officiis vitae, harum obcaecati porro et amet incidunt eaque autem quis fugit perspiciatis nisi officia expedita optio placeat sint in?</p>
 
-       </div>
+        </aside>
+        <aside>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti itaque, officiis vitae, harum obcaecati porro et amet incidunt eaque autem quis fugit perspiciatis nisi officia expedita optio placeat sint in?</p>
+
+        </aside>
+        <aside>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti itaque, officiis vitae, harum obcaecati porro et amet incidunt eaque autem quis fugit perspiciatis nisi officia expedita optio placeat sint in?</p>
+
+        </aside>
+
     </main>
     <footer>
-        <h2>siga-nos nas redes sociais</h2>
 
     </footer>
     
