--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="#">Fotos</a>
-            <a href="#">Sobre nós</a>
-            <a href="#">Projetos</a>
+            <a href="#" class="menu">Fotos</a>
+            <a href="#" class="menu">Sobre nós</a>
+            <a href="#" class="menu">Projetos</a>
             
 
         </nav>
@@ -21,19 +21,7 @@
     <div class="template"></div>
     <main>
         <h1>Torne-se um músico melhor realizando seu sonho!</h1>
-        <aside>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti itaque, officiis vitae, harum obcaecati porro et amet incidunt eaque autem quis fugit perspiciatis nisi officia expedita optio placeat sint in?</p>
-
-        </aside>
-        <aside>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti itaque, officiis vitae, harum obcaecati porro et amet incidunt eaque autem quis fugit perspiciatis nisi officia expedita optio placeat sint in?</p>
-
-        </aside>
-        <aside>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti itaque, officiis vitae, harum obcaecati porro et amet incidunt eaque autem quis fugit perspiciatis nisi officia expedita optio placeat sint in?</p>
-
-        </aside>
-
+        
     </main>
     <footer>
 
